# signpost

./: .coveragerc  .gitattributes  .isort.cfg  .pre-commit-config.yaml  .travis.yml  README.rst  mypy.ini  pyproject.toml
src/signpost/: __init__.py  decorators.py  properties.py  utils.py
tests/: test_decorators.py  test_meta.py  test_properties.py  test_utils.py
